--- a/.github/workflows/despliegue.yml
+++ b/.github/workflows/despliegue.yml
@@ -11,15 +11,15 @@ jobs:
 
     steps:
       - name: 🦅 Actualizar build por SSH
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.DOMINIO }}
           username: ${{ secrets.USUARIO }}
-          password: ${{ secrets.CLAVE }}
+          key: ${{ secrets.LLAVE_SSH }}
           script: |
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             cd ${{ secrets.RUTA }}
             git pull origin main
-            yarn
+            yarn install --frozen-lockfile
             yarn build
