--- a/package.json
+++ b/package.json
@@ -6,53 +6,22 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.prod.js && npm run crear-lista",
-    "start": "npm run crear-lista && webpack serve --config webpack.dev.js",
+    "build": "yarn crear-lista && vite build",
+    "dev": "yarn crear-lista && vite",
     "crear-lista": "node crearListaVideos",
     "lint": "prettier --check .",
     "lint:fix": "prettier --write --list-different ."
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "add": "^2.0.6",
     "autoprefixer": "^10.4.13",
-    "babel-loader": "^8.2.4",
-    "clean-webpack-plugin": "^4.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.3",
-    "html-loader": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.2",
+    "cssnano": "^6.0.1",
     "postcss": "^8.4.21",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.8.3",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
-    "webpack-merge": "^5.8.0"
+    "vite": "^4.3.9"
   },
   "dependencies": {
-    "@babel/runtime": "^7.20.7",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^4.2.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
