👽️ cambiar de servidor

--- a/.github/workflows/despliegue.yml
+++ b/.github/workflows/despliegue.yml
@@ -13,8 +13,8 @@ jobs:
       - name: 🦅 Actualizar build por SSH
         uses: appleboy/ssh-action@v0.1.7
         with:
-          host: ${{ secrets.DOMINIO }}
-          username: ${{ secrets.USUARIO }}
+          host: ${{ secrets.DOMINIO_AZURE }}
+          username: ${{ secrets.USUARIO_AZURE }}
           key: ${{ secrets.LLAVE_SSH }}
           script: |
             export NVM_DIR=~/.nvm
