--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ node_modules
 estaticos/videos/*
 !estaticos/videos/README.md
 estaticos/listaVideos.json
+
+# Ver documentación de Yarn moderno (> v2): https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
