--- a/.github/workflows/despliegue.yml
+++ b/.github/workflows/despliegue.yml
@@ -1,4 +1,4 @@
-name: Despliegue
+name: 🦍 Despliegue
 
 on:
   push:
@@ -21,5 +21,5 @@ jobs:
             source ~/.nvm/nvm.sh
             cd ${{ secrets.RUTA }}
             git pull origin main
-            yarn install --frozen-lockfile
+            yarn set version 4.5.0
             yarn build
