--- a/.github/workflows/despliegue.yml
+++ b/.github/workflows/despliegue.yml
@@ -21,5 +21,5 @@ jobs:
             source ~/.nvm/nvm.sh
             cd ${{ secrets.RUTA }}
             git pull origin main
-            yarn set version 4.5.0
+            yarn install
             yarn build
